--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         var randomFamily = family[Math.floor(Math.random()*family.length)];
 
-        var nouns = ["wrench", "hammer", "cat", "dog", "giraffe", "elephant", "metal detector", "bowling ball", "twin tower", "chicken", "ping pong ball", "diagnosis of HIV", "an endless loop of 'Baby' by Justin Bieber" "a root beer flavored Dum-Dum", ];
+        var nouns = ["wrench", "hammer", "cat", "dog", "giraffe", "elephant", "metal detector", "bowling ball", "twin tower", "chicken", "ping pong ball", "diagnosis of HIV", "an endless loop of 'Baby' by Justin Bieber", "a root beer flavored Dum-Dum", ];
         
         var randomNoun = nouns[Math.floor(Math.random()*nouns.length)];
     </script>
